ch9-helm/labs/lab01/todo-list/templates/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  type: NodePort
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 8080 
      targetPort: 8080 
      nodePort: 32080
