ch9-helm/labs/lab01/todo-list/templates/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  type: NodePort
  selector:
    app: frontend # 프론트엔드 파드의 라벨과 일치시켜야 함 (예시: app: frontend)
  ports:
    - protocol: TCP
      port: 3000 # Service가 노출할 클러스터 내부 포트 (보통 프론트엔드 앱 포트, 예: 3000)
      targetPort: 3000 # 실제 컨테이너에서 사용하는 포트
      nodePort: 32000
